# autotools-example

./: .gitignore  COPYING  Makefile.am  README.md  cleanup.sh  configure.ac
example/: main.cpp
include/: Makefile.am  toollib.h
include/toollib/: print.h
src/: Makefile.am  toollib.cpp
src/toollib/: print.cpp
test/: main.cpp
